--- a/package.json
+++ b/package.json
@@ -7,19 +7,27 @@
     "start": "node server.js",
     "dev": "node server.js"
   },
-  "keywords": ["nats", "karting", "driver", "registry"],
+  "keywords": [
+    "nats",
+    "karting",
+    "driver",
+    "registry"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "pg": "^8.11.0",
-    "bcryptjs": "^2.4.3",
-    "uuid": "^9.0.0",
     "axios": "^1.6.2",
-    "dotenv": "^16.3.1"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.0",
+    "uuid": "^9.0.0",
+    "web-push": "^3.6.7"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "sharp": "^0.34.5"
+  },
   "engines": {
     "node": ">=18.0.0"
   }
