--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "pg": "^8.11.0",
     "uuid": "^9.0.0",
     "web-push": "^3.6.7"
